tests/baselines/reference/tsxElementResolution4.errors.txt
tests/cases/conformance/jsx/file.tsx(16,2): error TS2322: Type '{ q: string; }' is not assignable to type '{ m: string; }'.
  Property 'q' does not exist on type '{ m: string; }'.


==== tests/cases/conformance/jsx/file.tsx (1 errors) ====
    declare module JSX {
    	interface Element { }
    	interface IntrinsicElements {
    	    div: { n: string; };
    	    span: { m: string; };
    	}
    }
    
    // OK
    <div n='x' />;
    
    // OK
    <span m='ok' />;
    
    // Error
    <span q='' />;
     ~~~~
!!! error TS2322: Type '{ {|q|0|}: string; }' is not assignable to type '{ {|m|1|}: string; }'.
!!! error TS2322:   Property 'q' does not exist on type '{ m: string; }'.
!!! annotated symbol 0 tests/cases/conformance/jsx/file.tsx:16:7
!!! annotated symbol 1 tests/cases/conformance/jsx/file.tsx:5:14
    